--- a/package.json
+++ b/package.json
@@ -17,8 +17,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "test:debug": "react-scripts --inspect-brk test --runInBand --no-cache",
-    "eject": "react-scripts eject",
-    "precommit": "pretty-quick --staged"
+    "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -40,11 +39,9 @@
     "enzyme-adapter-react-16": "^1.13.2",
     "eslint-config-prettier": "^4.3.0",
     "eslint-plugin-prettier": "^3.1.0",
-    "husky": "^2.3.0",
     "lint-staged": "^8.1.7",
     "moxios": "^0.4.0",
     "prettier": "^1.18.2",
-    "pretty-quick": "^1.11.0",
     "redux-devtools-extension": "^2.13.8"
   }
 }
